Setup UI shell